# meteor_tracker

./: Cargo.toml  README.md
databases/: k5fov_deg29.csv
src/: coordinates.rs  main.rs  parse_stars.rs  take_picture.rs
src/coordinates/: flower.rs  generate_database.rs  hygdata_v3_6m_1.csv  mod.rs  star.rs  tests.rs
src/coordinates/data/: hyg_data.csv
src/parse_stars/: mod.rs  star.rs
