[package]
name = "meteor_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
rustfft = "6.0.1"
serde_json = "1.0.81"
serde = "1.0.137"
serde_derive = "1.0.137"
rand = "0.8.5"
